<resources>
    <string name="app_name">采集与传输</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn1Text">摄像</string>
    <string name="btn2Text">发送</string>
    <string name="title">视频采集与传输</string>
    <string name="btnExit">退出</string>
    <string name="btnText">打开</string>
    <string name="resulttip">提示</string>
    <string name="alert_dialog_btn_text">确定</string>
    <string name="no_select_video">未选择视频！</string>
    <string name="no_capture_video">未拍摄视频！</string>
</resources>
