<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <LinearLayout
        android:background="#ff393a3f"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            style="@style/textviewstyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/title" />

        <Button
            android:id="@+id/btnSend"
            style="@style/send_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/btn2Text" />
    </LinearLayout>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="280dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOpen"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnText" />

        <Button
            android:id="@+id/btnRecord"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn1Text" />

        <Button
            android:id="@+id/btnExit"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnExit" />
    </LinearLayout>


</LinearLayout>
